--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <br>
 
-    <a href="eduser.app">My Favourite Website</a>
+    <a href="https://eduser.app">My Favourite Website</a>
 
     <button>Click me</button>
     <br><br>
