--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
 
 <br>
 
-    <a href="https://eduser.app">My Favourite Website</a>
-
+    <a href="https://eduser.app">Website for my work</a>
+    <br><br>
+    <a href="https://itproger.com">Website for my learning coding skills</a>
+    <br><br>
+    <a href="https://investor-smart.skillspace.ru/library/courses.">Website for learning to finance</a>
+    <br><br>
     <button>Click me</button>
     <br><br>
 
     <table border="2">
         <tr>
-      <!-- Сол жақ баған: Schedule -->
       <td width="60%" valign="top">
         <table border="2" width="100%">
           <caption style="font-size: large; font-weight:bold;">Schedule</caption>
@@ -90,13 +93,12 @@
         </table>
       </td>
 
-      <!-- Оң жақ баған: негізгі мәтін -->
       <td valign="top">
         <h3>Main Content</h3>
         <p>
-          Welcome to my schedule page!  
-          On the left, you can see all my classes for the week.  
-          Here, in the main content area, I can write notes, assignments, or announcements.
+          Welcome to my schedule class table!  
+          On the left, you can see all my classes for the week in Astana It University.  
+          Here, in the main content area, I can write notes and assignments
         </p>
       </td>
     </tr>
